# Protocol-Detector

./: .gitmodules  CMakeLists.txt  External_GTest.cmake  External_LibTins.cmake  README.md  protocol_detector.cpp
.github/workflows/: cmake.yml
configurations/: Ethernet.conf  HTTP.conf  IP.conf  TCP.conf  UDP.conf  include.conf
configurations/application_layer/: DNS.conf  include.conf
configurations/link_layer/: Ethernet.conf  include.conf
configurations/network_layer/: IP.conf  IPv6.conf  include.conf
configurations/transport_layer/: TCP.conf  include.conf
include/: bytecode.hpp  code_generation_utils.hpp  definitions.hpp  elicitation_utils.hpp  exceptions.hpp  file_manager.hpp  lexer.hpp  matched_packet.hpp  pattern_parser.hpp  print_format.hpp  printer_class.hpp  protocol.hpp  virtual_machine.hpp
sources/: bytecode.cpp  code_generation_utils.cpp  elicitation_utils.cpp  file_manager.cpp  lexer.cpp  pattern_parser.cpp  print_format.cpp  printer_class.cpp  protocol.cpp  virtual_machine.cpp
tests/: CMakeLists.txt  code_generation_untils_unittest.cpp  elicitation_utils_unittest.cpp  lexer_unittest.cpp  matching_unittest.cpp  pattern_parser_unittest.cpp  protocol_unittest.cpp  unittesting_utils.cpp  unittesting_utils.hpp  virtual_machine_unittest.cpp
